--- a/DNews/app/src/main/res/drawable/ic_account.xml
+++ b/DNews/app/src/main/res/drawable/ic_account.xml
@@ -6,6 +6,6 @@
     android:viewportWidth="24">
     <path
         android:fillColor="#ff000000"
-        android:pathData="M23,11H18A1,1 0,0 0,17 12V21A1,1 0,0 0,18 22H23A1,1 0,0 0,24 21V12A1,1 0,0 0,23 11M23,20H18V13H23V20M20,2H2C0.89,2 0,2.89 0,4V16A2,2 0,0 0,2 18H9V20H7V22H15V20H13V18H15V16H2V4H20V9H22V4C22,2.89 21.1,2 20,2Z"/>
+        android:pathData="M12,4A4,4 0,0 1,16 8A4,4 0,0 1,12 12A4,4 0,0 1,8 8A4,4 0,0 1,12 4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"/>
 
 </vector>
