--- a/DNews/app/src/main/res/drawable/ic_time.xml
+++ b/DNews/app/src/main/res/drawable/ic_time.xml
@@ -6,6 +6,6 @@
     android:viewportWidth="24">
     <path
         android:fillColor="#ff000000"
-        android:pathData="M5,3V21H11V17.5H13V21H19V3H5M7,5H9V7H7V5M11,5H13V7H11V5M15,5H17V7H15V5M7,9H9V11H7V9M11,9H13V11H11V9M15,9H17V11H15V9M7,13H9V15H7V13M11,13H13V15H11V13M15,13H17V15H15V13M7,17H9V19H7V17M15,17H17V19H15V17Z"/>
+        android:pathData="M12,20C16.4,20 20,16.4 20,12S16.4,4 12,4 4,7.6 4,12 7.6,20 12,20M12,2C17.5,2 22,6.5 22,12S17.5,22 12,22C6.5,22 2,17.5 2,12C2,6.5 6.5,2 12,2M17,11.5V13H11V7H12.5V11.5H17Z"/>
 
 </vector>
