--- a/DNews/app/src/main/res/layout/activity_list_news.xml
+++ b/DNews/app/src/main/res/layout/activity_list_news.xml
@@ -13,6 +13,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            app:contentInsetStartWithNavigation="0dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"/>
