--- a/DNews/app/src/main/res/values/colors.xml
+++ b/DNews/app/src/main/res/values/colors.xml
@@ -2,12 +2,14 @@
 <resources>
    	<!--Light Mode-->
 	<color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#EEEEEE</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#212121</color>
     <color name="bg_light">#FFFFFF</color>
-	<color name="colorTextLight">#212121</color>
-	<color name="colorTextSecondLight">#9E9E9E</color>
-	
+	<color name="colorControlHighlight">#EEEEEE</color>
+   	<color name="colorControlNormal">#000000</color>
+	<color name="colorTextLight">#000000</color>
+	<color name="colorTextSecondLight">#999999</color>
+	<color name="overFlowStyleColor">#000000</color>
 	<!--Dark Mode-->
 	<color name="colorPrimaryNight">#303030</color>
     <color name="colorPrimaryDarkNight">#212121</color>
@@ -19,8 +21,12 @@
     <!--image tint color-->
     <color name="color_general">#2196F3</color>
     <color name="color_entertainment">#F44336</color>
-    <color name="color_business">#FFEB3B</color>
+    <color name="color_business">#795548</color>
     <color name="color_health">#4CAF50</color>
-    <color name="color_sports">#9E9E9E</color>
+    <color name="color_sports">#607D8D</color>
     <color name="color_technology">#3F51B5</color>
+    
+    <color name="black_transparent">#65000000</color>
+    
+    
 </resources>
