--- a/DNews/app/src/main/res/values/dimens.xml
+++ b/DNews/app/src/main/res/values/dimens.xml
@@ -16,12 +16,14 @@
     <dimen name="margin_200">200dp</dimen>
     <dimen name="margin_210">210dp</dimen>
     <dimen name="margin_230">230dp</dimen>
+    <dimen name="margin_250">250dp</dimen>
     <dimen name="margin_270">270dp</dimen>
     <dimen name="margin_start_left">15dp</dimen>
 
     <dimen name="text_30">30sp</dimen>
     <dimen name="title_size">25sp</dimen>
     <dimen name="text_16">16sp</dimen>
+    <dimen name="text_12">12sp</dimen>
     <dimen name="title_card_size">18sp</dimen>
     <dimen name="subtitle_card_size">14sp</dimen>
 
