--- a/DNews/app/src/main/res/values/styles.xml
+++ b/DNews/app/src/main/res/values/styles.xml
@@ -6,11 +6,16 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+		<item	name="android:colorControlHighlight">@color/colorControlHighlight</item>
+		<item	name="android:colorControlNormal">@color/colorControlNormal</item>
        		<item name="android:textColorPrimary">@color/colorTextLight</item>
        		<item name="android:textColorSecondary">@color/colorTextSecondLight</item>
        		<item name="android:windowBackground">@color/bg_light</item>
-       		<item name="actionOverflowButtonStyle">@style/MyOverflowButtonStyle</item>
+        <item name="actionOverflowButtonStyle">@style/overflowButtonStyle</item>
        		<item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
+		<item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowEnterTransition">@android:transition/slide_right</item>
+        <item name="android:windowExitTransition">@android:transition/slide_left</item>
     </style>
 
     <!--Splash screen theme. You should use it in your manifest file for your Splash Activity-->
@@ -21,9 +26,8 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
     
-    
-   	<style name="MyOverflowButtonStyle" parent="Widget.AppCompat.ActionButton.Overflow">
-   	<item name="android:tint">@color/colorTextDark</item>
+   	<style name="overflowButtonStyle" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:tint">@color/overFlowStyleColor</item>
    	</style>
     
 </resources>
