--- a/DNews/app/src/main/res/layout/content_main.xml
+++ b/DNews/app/src/main/res/layout/content_main.xml
@@ -47,7 +47,7 @@
 					android:textAppearance="?android:attr/textAppearanceSmall"
 					android:text="@string/title_general"
                     android:gravity="center"
-                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColor="?attr/android:windowBackground"
                     android:textSize="@dimen/title_card_size"
                     android:textStyle="bold"
                     android:layout_alignTop="@+id/img_general"
@@ -92,7 +92,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/title_business"
                     android:gravity="center"
-                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColor="?attr/android:windowBackground"
                     android:textSize="@dimen/title_card_size"
                     android:textStyle="bold"
                     android:layout_alignTop="@+id/img_business"
@@ -137,7 +137,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/title_entertainment"
                     android:gravity="center"
-                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColor="?attr/android:windowBackground"
                     android:textSize="@dimen/title_card_size"
                     android:textStyle="bold"
                     android:layout_alignTop="@+id/img_entertainment"
@@ -191,7 +191,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/title_health"
                     android:gravity="center"
-                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColor="?attr/android:windowBackground"
                     android:textSize="@dimen/title_card_size"
                     android:textStyle="bold"
                     android:layout_alignTop="@+id/img_health"
@@ -236,7 +236,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/title_sports"
                     android:gravity="center"
-                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColor="?attr/android:windowBackground"
                     android:textSize="@dimen/title_card_size"
                     android:textStyle="bold"
                     android:layout_alignTop="@+id/img_sports"
@@ -282,7 +282,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/title_technology"
                     android:gravity="center"
-                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColor="?attr/android:windowBackground"
                     android:textSize="@dimen/title_card_size"
                     android:textStyle="bold"
                     android:layout_alignTop="@+id/img_technology"
