--- a/DNews/app/src/main/res/menu/main_menu.xml
+++ b/DNews/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.del.dnews.activity.MainActivity">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
+      
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
         android:title="Settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="always" />
 </menu>
